Master
------

 * Port the ``camelot_example`` application and :ref:`tutorial-videostore` to `Declarative`
 
 * Add a toolbar to the form view, configurable through
   the :meth:`camelot.admin.object_admin.ObjectAdmin.get_form_toolbar_actions` method.
 
 * Move the progress widget from the removed status bar to the toolbar
 
 * Add :class:`camelot.admin.table.ColumnGroup` in the list view. 
 
   .. image:: /_static/controls/column_group.png

 * See :ref:`migrate-11.12.30` for documentation on how to upgrade an 
   existing Camelot project.
   
 * Tracking of changes goes through the :class:`camelot.admin.object_admin.ObjectAdmin`
 
 * Cleanup of the default Camelot models :
 
     * they can be used independently of each other
     
     * Persons, Organizations, etc. have been moved to :mod:`camelot.model.party`
     
     * Simplification of the underlying tables
     
     * The default `metadata` was moved :mod:`camelot.core.sql`

 * Store user changed column width in settings and :ref:`field-attribute-column_width` field attribute

 * :func:`camelot.admin.not_editable_admin.not_editable_admin` has an `actions` argument
 
 * Reworked searching for translation files
 
 * Portuguese (Brazil) translations
 
 * Workaround for mainwindow bug on OS X 

Release 11.12.30
----------------

 * Fix inclusion of stylesheets and templates in the egg

Release 11.12.29
----------------

 * Import from file wizard supports importing excel files
 
 * A number of new :class:`ActionStep` classes that can be used in custom 
   :class:`Action` classes or serve as an example :
   
      * :class:`camelot.view.action_steps.change_object.ChangeObjects`
      * :class:`camelot.view.action_steps.gui.CloseView`
      * :class:`camelot.view.action_steps.gui.MessageBox`
      * :class:`camelot.view.action_steps.select_object.SelectObject`
  
 * Move the repository to gitorious
 
 * The toolbar in the one-to-many and many-to-many editor are configurable