@@ -1,3 +1,6 @@
+
+ * Add SessionTransaction context manager
+
 Master
 ------
 
